# nikahforever-querygpt

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  config.py  database.py  frontend.py  main.py
app/core/: pipeline.py  query_executor.py  response_formatter.py  sql_validator.py
app/models/: schemas.py
app/prompts/: contextualise.py  system_prompt.py
app/routes/: query.py  schema.py  suggestions.py
app/vectorstore/: embeddings.py  pinecone_client.py  retriever.py
docs/: fastapi-sqlite-guide.md  nf-querygpt-pinecone-architecture.md
scripts/: index_knowledge.py
