[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-pinecone>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
